# Engine

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake-multi-platform.yml
Docs/EngineDocs/: Test Structure.md
Docs/EngineDocs/.obsidian/: workspace.json
Docs/EngineDocs/Docs/: First Pass Engine Features.md
Docs/EngineDocs/Docs/Engine Features/: Base Component.md  Base Object.md  Logging System.md  Reflection System.md
Examples/HelloWorld/: CMakeLists.txt  main.cpp
Source/: CMakeLists.txt
Source/Engine/Core/: CMakeLists.txt  Core.cpp  Core.h  CoreIncludes.h  Log.h  Reflection.h
Source/Engine/Core/Object/: CMakeLists.txt  Component.cpp  Component.h  Object.cpp  Object.h
Test/: CMakeLists.txt  CoreTests.cpp
